working on Javascript

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Syyed Muhammad Irshad</title>
 </head>
 <body>
-<!-- 
+<h1>Syyed Muhammad Irshad Roll No : PIAIC91573</h1>
     <p>2. Personal Message: Store a person’s name in a variable, and print a message to that person. 
         Your message should be simple, such as, “Hello Eric, would you like to learn some Python today?”
     </p>
@@ -25,7 +25,7 @@
             var nameLo = name.toLowerCase();
             alert("Hello, " +nameUp+ " ! , would you like to learn some Python today?");
             alert("Hello, " +nameLo+ " ! , would you like to learn some Python today?");
-        </script> -->
+        </script>
 
 <p>3. Famous Quote: Find a quote from a famous person you admire. Print the quote and the name of its author. 
     Your output should look something like the following, including the quotation marks:</p>
